@@ -105,8 +105,8 @@ $_lang['prop_goodnewsupdateprofile.placeholderprefix_desc']         = 'The prefi
 $_lang['prop_goodnewsunsubscription.errtpl_desc']                   = 'The template for error message output in fields.';
 $_lang['prop_goodnewsunsubscription.prehooks_desc']                 = 'What scripts to fire, before the form passes validation. This can be a comma-separated list of hooks, and if the first fails, the proceeding ones will not fire. A hook can also be a Snippet name.';
 $_lang['prop_goodnewsunsubscription.posthooks_desc']                = 'What scripts to fire, after the user has been unsubscribed. This can be a comma-separated list of hooks, and if the first fails, the proceeding ones will not fire. A hook can also be a Snippet name.';
-$_lang['prop_goodnewsunsubscription.sendunauthorizedpage_desc']     = 'Wenn ein Benutzer anhand der übergebenen sid aus dem Email nicht identifiziert wird, wird dieser zur Unauthorized Seite weitergeleitet.';
-$_lang['prop_goodnewsunsubscription.submitvar_desc']                = 'Prüfvariable: Falls leer oder nicht gesetzt, wird das Snippet alle POST-Variablen im Formular verwenden.';
+$_lang['prop_goodnewsunsubscription.sendunauthorizedpage_desc']     = 'If a user is not identified by the sid from the email, redirect him to the Unauthorized Page.';
+$_lang['prop_goodnewsunsubscription.submitvar_desc']                = 'Variable for check: If empty or set to false, the snippet will process the form with all POST variables.';
 $_lang['prop_goodnewsunsubscription.successkey_desc']               = 'Name of the key which will be sent as URL parameter with the value true if the unsubscription was successfull.';
 $_lang['prop_goodnewsunsubscription.removeuserdata_desc']           = 'If set, all user-data will be removed from the MODX database if a users cancels his subscription. Otherwise only GoodNews related data will be removed and the user will be deactivated.';
 $_lang['prop_goodnewsunsubscription.placeholderprefix_desc']        = 'The prefix to use for all placeholders set by this snippet.';
@@ -145,7 +145,7 @@ $_lang['prop_goodnewsrequestlinks.requestlinksemailtplalt_desc']    = 'Plain-tex
 $_lang['prop_goodnewsrequestlinks.requestlinksemailtpltype_desc']   = 'The template-type for the request links email.';
 $_lang['prop_goodnewsrequestlinks.errtpl_desc']                     = 'The template for error message output in fields.';
 $_lang['prop_goodnewsrequestlinks.emailfield_desc']                 = 'Name of the field to use for the email address.';
-$_lang['prop_goodnewsrequestlinks.sendunauthorizedpage_desc']       = 'If a user is not identified by the submiited email, redirect him to the Unauthorized Page.';
+$_lang['prop_goodnewsrequestlinks.sendunauthorizedpage_desc']       = 'If a user is not identified by the submitted email, redirect him to the Unauthorized Page.';
 $_lang['prop_goodnewsrequestlinks.submitvar_desc']                  = 'Variable for check: If empty or set to false, the snippet will process the form with all POST variables.';
 $_lang['prop_goodnewsrequestlinks.successmsg_desc']                 = 'If not redirecting using the submittedResourceId parameter, will display this message instead.';
 $_lang['prop_goodnewsrequestlinks.validate_desc']                   = 'A comma-separated list of fields to validate, with each field name as name:validator (eg: email:required). Validators can also be chained, like email:email:required.';
